make sure after header nav is hidden on mobile
Checks off one more here https://github.com/maithemewp/mai-engine/issues/163

--- a/assets/scss/components/menu/_nav.scss
+++ b/assets/scss/components/menu/_nav.scss
@@ -15,6 +15,6 @@
 
 .nav-after-header {
 	z-index: 9;
-	display: var(--nav-header-display, (flex));
+	display: var(--nav-header-display, none);
 	width: 100%;
 }
